--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="content">
-      <img src="./images/image-qr-code.png" alt="" />
-      <h2>Improve your front-end
-        skills by building projects
-      </h2>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <main>
+    <div class="container">
+      <div class="content">
+        <img src="./images/image-qr-code.png" alt="" />
+        <h1>Improve your front-end
+          skills by building projects
+        </h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
-  </div>
-  <div class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Josh K</a>.</p>
-  </div>
-
+  </main>
+  <footer>
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Josh K</a>.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
